Fri Aug 01 21:12:26 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - Added support for /me.

Fri Aug 01 20:48:05 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - The entry widget is now word-wrapped.

Fri Aug 01 20:43:57 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - Fixed Cae Bug #1, all the way from New Jersey! Gaim was sending
	    out a TYPED message even after sending a full message.

Fri Aug 01 20:18:54 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - Outgoing typing notification is now supported.

Fri Aug 01 20:07:30 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - The unwanted newline after every line entered in an IM or chat
	    is now stripped.

Fri Aug 01 20:01:16 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountEditor.cpp:
	* src/QGaimAccountEditor.h:
	  - Use our QGaimTabWidget for the account editor.

Fri Aug 01 20:00:20 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	* src/QGaimMultiLineEdit.cpp:
	* src/QGaimMultiLineEdit.h:
	  - Added history support to the input box.

Fri Aug 01 19:09:17 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimTabBar.cpp:
	  - The protocol icon for the account on each conversation is
	    now displayed on the tab.

Fri Aug 01 18:19:10 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* mkipk.sh:
	  - The Depends line was being written to stdout, and not to the
	    control file. Fixed.

Fri Aug 01 15:57:12 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	  - Opening an IM window from the buddy list now raises the new tab
	    in the conversation window.

Fri Aug 01 15:50:35 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
